[package]
name = "time-condition"
description = "Check whether the current time matches a condition passed via CLI args"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
evalexpr = "11.2.0"
time = { version = "0.3.30", features = ["local-offset"] }
